2024-03-07T08:14:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8184939897 # 181
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-07
* notice: last 14d: unq all: 2 28
* notice: prev accum: outdated-unq outdated-all / unq all: 764 1213 / 779 1241
* notice: next accum: outdated-unq outdated-all / unq all: 764 1213 / 780 1242
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-02-22 2024-03-07]

2024-03-07T00:52:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8181101117 # 180
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-07
* notice: last 14d: unq all: 2 28
* notice: prev accum: outdated-unq outdated-all / unq all: 763 1211 / 779 1241
* notice: next accum: outdated-unq outdated-all / unq all: 764 1213 / 779 1241
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-21] / []

2024-03-06T16:19:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8175286983 # 179
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-06
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 763 1211 / 779 1240
* notice: next accum: outdated-unq outdated-all / unq all: 763 1211 / 779 1241
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-03-06]

2024-03-06T08:19:13Z: