@@ -1,79 +1,14 @@
 {
-  "count": 28,
-  "uniques": 2,
+  "count": 2,
+  "uniques": 1,
   "clones": [
     {
-      "timestamp": "2024-02-22T00:00:00Z",
+      "timestamp": "2024-04-05T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
-      "timestamp": "2024-02-23T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-02-24T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-02-25T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-02-26T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-02-27T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-02-28T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-02-29T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2024-03-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-03-02T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-03-03T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-03-04T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-03-05T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-03-06T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-03-07T00:00:00Z",
+      "timestamp": "2024-04-11T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
